--- a/main.html
+++ b/main.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
-</head>
-<body>
-    <h1>Tennis market</h1>
-    <div>
-        Welcome to Tennis Market!
-        Enjoy your shopping!
-        <br/>
-        <br/>
-        <a>order list</a>
-    </div>
-
-    
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title> Main </title>
+        <link rel="stylesheet" href="./main.css">
+    </head>
+    <body>
+        <h1>Tennis market</h1>
+        <div id="txt_welcome">
+            Welcome to Tennis market! <br>
+            Enjoy your shopping.
+            <br>
+            <br>
+            <a href="./orderlist.html"> order list </a>
+        </div>
+        <div style="display:grid; grid-template-columns: 1fr 1fr 1fr;">
+            <div class="card">
+                <img class="card_img" src="./img/redRacket.png">
+                <p class="card_title"> Red Racket </p>
+                <input class="card_button" type="button" value="order" 
+                    onclick="location.href='/order?productId=1'">
+            </div>
+            <div class="card">
+                <img class="card_img" src="./img/blueRacket.png">
+                <p class="card_title"> Blue Racket </p>
+                <input class="card_button" type="button" value="order" onclick="alert(2);">
+            </div>
+            <div class="card">
+                <img class="card_img" src="./img/blackRacket.png">
+                <p class="card_title"> Black Racket </p>
+                <input class="card_button" type="button" value="order" onclick="alert(3);">
+            </div>
+        </div>
+    </body>
 </html>
